--- a/src/ATOM/SConstruct
+++ b/src/ATOM/SConstruct
@@ -4,14 +4,19 @@
 
 import sys
 sys.path.append('..')
-from FortranCompilation import CompilationEnvironment
+from FeffBuild import CompilationEnvironment, InstallEnvironment
 
 env = CompilationEnvironment()
+ienv = InstallEnvironment()
 
 lib_src = Split('akeato.f  cofcon.f  etotal.f  fpf0.f   lagdat.f  nucdev.f  potslw.f  soldir.f \
                  wfirdf.f  aprdev.f  dentfa.f  fdmocc.f inmuat.f  messer.f  ortdat.f  s02at.f  \
                  tabrat.f  yzkrdf.f  bkmrdf.f  dsordf.f fdrirk.f  intdir.f  muatco.f  potrdf.f \
                  scfdat.f  vlda.f    yzkteg.f')
 
-env.StaticLibrary('libatom', lib_src)
+env.StaticLibrary('libfeffatom', lib_src)
+
+env.Install(ienv['i_lib'], 'libfeffatom.a')
+
+env.Alias('install', ienv['i_lib'])
 
