--- a/src/RDINP/SConstruct
+++ b/src/RDINP/SConstruct
@@ -4,9 +4,10 @@
 
 import sys
 sys.path.append('..')
-from FortranCompilation import CompilationEnvironment
+from FeffBuild import CompilationEnvironment, InstallEnvironment
 
 env = CompilationEnvironment()
+ienv = InstallEnvironment()
 
 bin_src = Split('rdinp_l.f  ffsort.f iniall.f  mkptz.f  rdline.f  setedg.f wrtall.f wrtjsn.f')
 
@@ -14,3 +15,6 @@ env.Program('rdinp', bin_src,
             LIBS = ['feffcom', 'jsonfortran', 'feffjson', 'feffmath', 'feffpar'], \
             LIBPATH = ['../COMMON', '../JSON/', '../MATH', '../PAR'])
 
+env.Install(ienv['i_bin'], 'rdinp')
+
+env.Alias('install', ienv['i_bin'])
