--- a/src/SConstruct
+++ b/src/SConstruct
@@ -2,19 +2,12 @@
 ## feff85exafs build system based on scons
 ## see HEADERS/license.h for license information
 
-menv = Environment()
-print '\n\tFortran compiler is ' + menv['FORTRAN']
+from FeffBuild import InstallEnvironment
 
-prefix = ARGUMENTS.get('prefix', '/usr/local')
-
-# Here are our installation paths:
-menv['i_prefix'] = prefix
-menv['i_lib']    = prefix + '/lib'
-menv['i_bin']    = prefix + '/bin'
-menv['i_inc']    = prefix + '/include'
-menv['i_data']   = prefix + '/share'
-
-print "\tinstallation prefix is: " + menv['i_prefix'] +"\n"
+env = Environment()
+print '\n\tFortran compiler is ' + env['FORTRAN']
+ienv = InstallEnvironment()
+print "\tinstallation prefix is: " + ienv['i_prefix'] +"\n"
 
 SConscript([\
             'PAR/SConstruct',    \
@@ -32,10 +25,12 @@ SConscript([\
             'PATH/SConstruct',   \
             'GENFMT/SConstruct', \
 	    'FF2X/SConstruct',   \
-        ], exports='menv')
+        ])
 
+# RDINP  -> feff.inp reader
 # POT    -> module 1
 # XSPH   -> module 2
-# FMS    -> module 3
+# FMS    -> module 3, executable is not a part of feff85exafs
 # PATH   -> module 4
 # GENFMT -> module 5
+# FF2X   -> module 6
