--- a/src/EXCH/SConstruct
+++ b/src/EXCH/SConstruct
@@ -5,6 +5,7 @@
 import sys
 sys.path.append('..')
 from FeffBuild import CompilationEnvironment, InstallEnvironment
+from   os.path   import realpath, join
 
 env = CompilationEnvironment()
 ienv = InstallEnvironment()
