--- a/src/FMS/SConstruct
+++ b/src/FMS/SConstruct
@@ -5,6 +5,7 @@
 import sys
 sys.path.append('..')
 from FeffBuild import CompilationEnvironment, InstallEnvironment
+from   os.path   import realpath, join
 
 env = CompilationEnvironment()
 ienv = InstallEnvironment()
@@ -22,7 +23,7 @@ env.StaticLibrary('libfefffms', lib_src)
 
 #env.Program('fms', bin_src, \
 #        LIBS    = ['fms', 'feffdw', 'feffcom', 'libjsonfortran', 'feffjson', 'feffmath', 'feffpar'], \
-#        LIBPATH = ['.', '../DEBYE', '../COMMON', '../JSON', '../MATH', '../PAR'])
+#        LIBPATH = ['.', join('..','DEBYE'), join('..','COMMON'), join('..','JSON'), join('..','MATH'), join('..','PAR')])
 
 
 env.Install(ienv['i_lib'], 'libfefffms.a')
