--- a/src/FOVRG/SConstruct
+++ b/src/FOVRG/SConstruct
@@ -5,6 +5,7 @@
 import sys
 sys.path.append('..')
 from FeffBuild import CompilationEnvironment, InstallEnvironment
+from   os.path   import realpath, join
 
 env = CompilationEnvironment()
 ienv = InstallEnvironment()
@@ -13,8 +14,8 @@ lib_src = Split('aprdec.f aprdep.f dfovrg.f diff.f dsordc.f inmuac.f intout.f  m
                  potdvp.f potex.f solin.f solout.f wfirdc.f yzkrdc.f yzktec.f')
 
 env.StaticLibrary('libfeffpha', lib_src,
-        LIBS = ['com', 'feffmath'], \
-        LIBPATH = ['../COMMON', '../MATH'])
+                  LIBS = ['com', 'feffmath'], \
+                  LIBPATH = [join('..','COMMON'), join('..','MATH')])
 
 env.Install(ienv['i_lib'], 'libfeffpha.a')
 
