--- a/src/PAR/SConstruct
+++ b/src/PAR/SConstruct
@@ -5,6 +5,7 @@
 import sys, re
 sys.path.append('..')
 from FeffBuild import CompilationEnvironment, InstallEnvironment
+from   os.path   import realpath, join
 
 env = CompilationEnvironment()
 ienv = InstallEnvironment()
