--- a/src/PATH/SConstruct
+++ b/src/PATH/SConstruct
@@ -5,6 +5,7 @@
 import sys
 sys.path.append('..')
 from FeffBuild import CompilationEnvironment, InstallEnvironment
+from   os.path   import realpath, join
 
 env = CompilationEnvironment()
 ienv = InstallEnvironment()
@@ -14,8 +15,8 @@ bin_src = Split('ffmod4.f   ccrit.f   heap.f    ipack.f   mcrith.f  mcritk.f  mp
                  prcrit.f   sortix.f  timrep.f')
 
 env.Program('pathfinder', bin_src,
-        LIBS = ['feffcom', 'jsonfortran', 'feffjson', 'feffmath', 'feffpar'], \
-        LIBPATH = ['../COMMON', '../JSON/', '../MATH', '../PAR'])
+            LIBS = ['feffcom', 'jsonfortran', 'feffjson', 'feffmath', 'feffpar'], \
+            LIBPATH = [join('..','COMMON'), join('..','JSON/'), join('..','MATH'), join('..','PAR')])
 
 env.Install(ienv['i_bin'], 'pathfinder')
 
