--- a/src/RDINP/SConstruct
+++ b/src/RDINP/SConstruct
@@ -5,6 +5,7 @@
 import sys
 sys.path.append('..')
 from FeffBuild import CompilationEnvironment, InstallEnvironment
+from   os.path   import realpath, join
 
 env = CompilationEnvironment()
 ienv = InstallEnvironment()
@@ -13,7 +14,7 @@ bin_src = Split('rdinp_l.f  ffsort.f iniall.f  mkptz.f  rdline.f  setedg.f wrtal
 
 env.Program('rdinp', bin_src,
             LIBS = ['feffcom', 'jsonfortran', 'feffjson', 'feffmath', 'feffpar'], \
-            LIBPATH = ['../COMMON', '../JSON/', '../MATH', '../PAR'])
+            LIBPATH = [join('..','COMMON'), join('..','JSON/'), join('..','MATH'), join('..','PAR')])
 
 env.Install(ienv['i_bin'], 'rdinp')
 
