--- a/src/XSPH/SConstruct
+++ b/src/XSPH/SConstruct
@@ -5,6 +5,7 @@
 import sys
 sys.path.append('..')
 from FeffBuild import CompilationEnvironment, InstallEnvironment
+from   os.path   import realpath, join
 
 env = CompilationEnvironment()
 ienv = InstallEnvironment()
@@ -19,7 +20,8 @@ other_objects = ('../FF2X/xscorr.o', '../POT/grids.o')
 
 env.Program('xsph', bin_src + other_objects,
             LIBS = ['feffint', 'jsonfortran', 'feffjson', 'feffpha', 'feffatom', 'feffcom', 'feffexch', 'feffmath', 'fefffms', 'feffpar'], \
-            LIBPATH = ['../COMMON', '../JSON', '../MATH', '../ATOM', '../EXCH', '../FOVRG', '../FMS', '../POT', '../PAR'])
+            LIBPATH = [join('..','COMMON'), join('..','JSON'), join('..','MATH'), join('..','ATOM'),
+                       join('..','EXCH'), join('..','FOVRG'), join('..','FMS'), join('..','POT'), join('..','PAR')])
 
 env.Install(ienv['i_bin'], 'xsph')
 
