--- a/wrappers/C/SConstruct
+++ b/wrappers/C/SConstruct
@@ -6,7 +6,7 @@ env = Environment()
 
 ## ------------------------------------------------------------------------------------------------------
 ## build the test program for the C wrapper
-env.Program('makepath', 'makepath.c', \
-            LIBS = ['feffpath', 'onepath', 'feffgenfmt', 'feffcom', 'feffmath', 'feffpar', 'gfortran', 'm'], \
-            LIBPATH = ['.', join('..','..','src','COMMON'), join('..','..','src','MATH'), join('..','..','src','PAR')])
+## Feff libraries should have already been installed
+env.Program('makepath', 'makepath.c',
+            LIBS = ['feffpath', 'onepath', 'feffgenfmt', 'feffcom', 'feffmath', 'feffpar', 'gfortran', 'm'])
 
