--- a/wrappers/C/SConstruct
+++ b/wrappers/C/SConstruct
@@ -7,6 +7,9 @@ env = Environment()
 ## ------------------------------------------------------------------------------------------------------
 ## build the test program for the C wrapper
 ## Feff libraries should have already been installed
-env.Program('makepath', 'makepath.c',
-            LIBS = ['feffpath', 'onepath', 'feffgenfmt', 'feffcom', 'feffmath', 'feffpar', 'gfortran', 'm'])
+env.Program('makepath', ['makepath.c', '/usr/local/lib/libfeffpath.a'],
+            LIBS = ['onepath', 'feffgenfmt', 'feffcom', 'feffmath', 'feffpar', 'gfortran', 'm'])
 
+## specify the static library, gcc will otherwise prefer the shared object
+
+## need to abstract out the location/name of the static library for use on other platforms
