--- a/src/DEBYE/SConstruct
+++ b/src/DEBYE/SConstruct
@@ -12,8 +12,8 @@ ienv = InstallEnvironment()
 
 lib_src = Split('sigcl.f  sigm3.f  sigms.f  sigrem.f  sigte3.f')
 
-env.StaticLibrary('libfeffdw', lib_src)
+env.SharedLibrary('libfeffdw', lib_src)
 
-env.Install(ienv['i_lib'], 'libfeffdw.a')
+env.Install(ienv['i_lib'], 'libfeffdw.so')
 
 env.Alias('install', ienv['i_lib'])
