--- a/src/EXCH/SConstruct
+++ b/src/EXCH/SConstruct
@@ -13,8 +13,8 @@ ienv = InstallEnvironment()
 lib_src = Split('csigma.f  csigz.f  cubic.f  edp.f  ffq.f  fndsng.f  imhl.f  mpse.f \
                  qsorti.f  quinn.f  rhl.f  rhlbp.f  vbh.f  xcpot.f')
 
-env.StaticLibrary('libfeffexch', lib_src)
+env.SharedLibrary('libfeffexch', lib_src)
 
-env.Install(ienv['i_lib'], 'libfeffexch.a')
+env.Install(ienv['i_lib'], 'libfeffexch.so')
 
 env.Alias('install', ienv['i_lib'])
