--- a/src/FOVRG/SConstruct
+++ b/src/FOVRG/SConstruct
@@ -13,10 +13,10 @@ ienv = InstallEnvironment()
 lib_src = Split('aprdec.f aprdep.f dfovrg.f diff.f dsordc.f inmuac.f intout.f  muatcc.f nucdec.f ortdac.f \
                  potdvp.f potex.f solin.f solout.f wfirdc.f yzkrdc.f yzktec.f')
 
-env.StaticLibrary('libfeffpha', lib_src,
-                  LIBS = ['com', 'feffmath'], \
+env.SharedLibrary('libfeffpha', lib_src,
+                  LIBS = ['feffcom', 'feffmath'], \
                   LIBPATH = [join('..','COMMON'), join('..','MATH')])
 
-env.Install(ienv['i_lib'], 'libfeffpha.a')
+env.Install(ienv['i_lib'], 'libfeffpha.so')
 
 env.Alias('install', ienv['i_lib'])
