--- a/src/GENFMT/SConstruct
+++ b/src/GENFMT/SConstruct
@@ -17,29 +17,29 @@ ienv = InstallEnvironment()
 ## build libgenfmt: contains most of the functionality of genfmt
 lib_src = ['genfmt_prep.f', 'fmtrxi.f', 'mmtr.f', 'mmtrxi.f', 'import.f',
            'rot3i.f', 'sclmz.f', 'setlam.f', 'snlm.f', 'xstar.f', 'trig.f']
-env.StaticLibrary('libfeffgenfmt', lib_src)
-env.Install(ienv['i_lib'], 'libfeffgenfmt.a')
+env.SharedLibrary('libfeffgenfmt', lib_src)
+env.Install(ienv['i_lib'], 'libfeffgenfmt.so')
 
-## ------------------------------------------------------------------------------------------------------
-## build the genfmt standalone program
 bin_src = ['ffmod5.f', 'genfmt.f', 'rdpath.f']
-env.Program('genfmt', ['regenf.f']+bin_src, \
-            LIBS = ['feffgenfmt', 'feffcom', 'jsonfortran', 'feffjson', 'feffmath', 'feffpar'], \
+env.Program('genfmt', ['regenf.f']+bin_src,
+            FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC',
+            OBJSUFFIX = env['SHOBJSUFFIX'],
+            LIBS = ['feffgenfmt', 'feffcom', 'jsonfortran', 'feffjson', 'feffmath', 'feffpar'],
             LIBPATH = ['.', join('..','COMMON'), join('..','JSON'), join('..','MATH'), join('..','PAR')])
 env.Install(ienv['i_bin'], 'genfmt')
 
 ## ------------------------------------------------------------------------------------------------------
 ## build the onepath fortran librtary
 onepath_src = ['onepath.f', 'pathgeom.f']  ## , 'read_onepath.f'
-other_obj = [join('..','FF2X','fdtarr.o'), join('..','FF2X','fdthea.o'), join('..','RDINP','mkptz.o')]
-env.StaticLibrary('libonepath', onepath_src + other_obj)
-env.Install(ienv['i_lib'], 'libonepath.a')
+other_src = [join('..','FF2X','fdtarr.f'), join('..','FF2X','fdthea.f'), join('..','RDINP','mkptz.f')]
+env.SharedLibrary('libonepath', onepath_src + other_src)
+env.Install(ienv['i_lib'], 'libonepath.so')
 
 ## ------------------------------------------------------------------------------------------------------
 ## build the feffpath C wrapper around onepath
-env.StaticLibrary('libfeffpath', 'feffpath.c')
+env.SharedLibrary('libfeffpath', 'feffpath.c')
 #env.SharedLibrary('libfeffpath', ['feffpath.c', 'libonepath.a']) # Windows: .dll/.lib/.dll.a     Mac: .dyld
-env.Install(ienv['i_lib'], 'libfeffpath.a')
+env.Install(ienv['i_lib'], 'libfeffpath.so')
 
 
 
