--- a/src/POT/SConstruct
+++ b/src/POT/SConstruct
@@ -16,14 +16,16 @@ bin_src = Split('ffmod1.f pot.f    scmtmp.f afolp.f broydn.f corval.f coulom.f f
                  grids.f  inipot.f istval.f moveh.f ovrlp.f  reapot.f rholie.f \
                  scmt.f   sumax.f  wpot.f   wrpot.f')
 
-env.StaticLibrary('libfeffint', lib_src)
+env.SharedLibrary('libfeffint', lib_src)
 
 env.Program('pot', bin_src,
+            FORTRANFLAGS = env['FORTRANFLAGS']+' -fPIC',
+            OBJSUFFIX = env['SHOBJSUFFIX'],
             LIBS = ['feffpha', 'feffatom', 'feffint', 'feffcom', 'feffmath', 'jsonfortran', 'feffjson', 'feffexch', 'fefffms', 'feffpar'], \
             LIBPATH = ['.', join('..','COMMON'), join('..','MATH'), join('..','JSON'), join('..','ATOM'),
                        join('..','EXCH'), join('..','FOVRG'), join('..','FMS'), join('..','PAR')])
 
-env.Install(ienv['i_lib'], 'libfeffint.a')
+env.Install(ienv['i_lib'], 'libfeffint.so')
 env.Install(ienv['i_bin'], 'pot')
 
 env.Alias('install', [ienv['i_lib'], ienv['i_bin']])
