use SWIG to make a functional (but ugly) python wrapper

--- a/src/GENFMT/SConstruct
+++ b/src/GENFMT/SConstruct
@@ -6,8 +6,8 @@ import sys
 sys.path.append('..')
 from FeffBuild import CompilationEnvironment, InstallEnvironment
 from distutils.spawn import find_executable
-import os
-from   os.path   import realpath, join
+import os, re
+from   os.path   import realpath, join, isdir
 
 try:
     Import('env')
@@ -69,6 +69,7 @@ env.Install(ienv['i_lib'], 'libfeffpath.so')
 
 
 perl_wrapper_path = realpath(join('..', '..', 'wrappers', 'perl'))
+python_wrapper_path = realpath(join('..', '..', 'wrappers', 'python'))
 ## ------------------------------------------------------------------------------------------------------
 ## the C wrapper example needs the header file
 if 'SUDO_UID' in os.environ.keys():
@@ -86,18 +87,38 @@ else:
 ##         perhaps 'import platform', then 'platform.system()'...
 
 if find_executable("swig"):
-    bld = Builder(action = 'swig -perl5 $SOURCE')
+
+    here=os.getcwd()
+
+    ## -- perl wrapper ------------------------------------------------------
+    if not isdir('perl'): os.mkdir('perl')
+    bld = Builder(action = 'swig -perl5 -outdir '+here+'/perl -o '+here+'/perl/feffpath_wrap.c $SOURCE')
     env = Environment(BUILDERS = {'SwigPerl' : bld})
-    env.SwigPerl(['feffpath_wrap.c', 'FeffPathWrapper.pm'], 'feffpath.i') # builder befined in FeffBuild.py
-    Depends(['feffpath_wrap.c', 'FeffPathWrapper.pm'], 'feffpath.h')
+    env.SwigPerl([join(here, 'perl', 'feffpath_wrap.c'), join(here, 'perl', 'FeffPathWrapper.pm')], 'feffpath.i') # builder befined in FeffBuild.py
+    Depends([join(here, 'perl', 'feffpath_wrap.c'), join(here, 'perl', 'FeffPathWrapper.pm')], 'feffpath.h')
     if 'SUDO_UID' in os.environ.keys():
-        env.InstallOwner(join(perl_wrapper_path, 'src'),           'feffpath_wrap.c',   int(os.getenv('SUDO_UID')), int(os.getenv('SUDO_GID')))
-        env.InstallOwner(join(perl_wrapper_path, 'lib', 'Xray/'), 'FeffPathWrapper.pm', int(os.getenv('SUDO_UID')), int(os.getenv('SUDO_GID')))
+        env.InstallOwner(join(perl_wrapper_path, 'src'),          join(here, 'perl', 'feffpath_wrap.c'),    int(os.getenv('SUDO_UID')), int(os.getenv('SUDO_GID')))
+        env.InstallOwner(join(perl_wrapper_path, 'lib', 'Xray/'), join(here, 'perl', 'FeffPathWrapper.pm'), int(os.getenv('SUDO_UID')), int(os.getenv('SUDO_GID')))
     else:
-        env.Install(join(perl_wrapper_path, 'src'),          'feffpath_wrap.c')
-        env.Install(join(perl_wrapper_path, 'lib', 'Xray/'), 'FeffPathWrapper.pm')
+        env.Install(join(perl_wrapper_path, 'src'),          join(here, 'perl', 'feffpath_wrap.c'))
+        env.Install(join(perl_wrapper_path, 'lib', 'Xray/'), join(here, 'perl', 'FeffPathWrapper.pm'))
+
+    ## -- python wrapper ----------------------------------------------------
+    if not isdir('python'): os.mkdir('python')
+    bld = Builder(action = 'swig -python -outdir '+here+'/python -o '+here+'/python/feffpath_wrap.c $SOURCE')
+    env = Environment(BUILDERS = {'SwigPython' : bld})
+    env.SwigPython([join(here, 'python', 'feffpath_wrap.c'), join(here, 'python', 'feffpath.py')], 'feffpath.i') # builder befined in FeffBuild.py
+    Depends([join(here, 'python', 'feffpath_wrap.c'), join(here, 'python', 'feffpath.py')], 'feffpath.h')
+    if 'SUDO_UID' in os.environ.keys():
+        env.InstallOwner(python_wrapper_path, join(here, 'python', 'feffpath_wrap.c'), int(os.getenv('SUDO_UID')), int(os.getenv('SUDO_GID')))
+        env.InstallOwner(python_wrapper_path, join(here, 'python', 'feffpath.py'),     int(os.getenv('SUDO_UID')), int(os.getenv('SUDO_GID')))
+    else:
+        env.Install(python_wrapper_path, join(here, 'python', 'feffpath_wrap.c'))
+        env.Install(python_wrapper_path, join(here, 'python', 'feffpath.py'))
+
 else:
     print "\nSWIG not installed, skipping perl wrapper for libfeffpath in GENFMT\n"
 
 env.Alias('install', [join(perl_wrapper_path, 'src'), join(perl_wrapper_path, 'lib', 'Xray/'),
+                      python_wrapper_path,
                       ienv['i_lib'], ienv['i_bin'], ienv['i_inc'] ])
